fix margin user single and documentos

--- a/src/app/hub/components/admin-template/admin-template.component.html
+++ b/src/app/hub/components/admin-template/admin-template.component.html
@@ -1,4 +1,4 @@
-<div class="set-12 mt-5 toptools" *ngIf="documents.length != 0">
+<div class="set-12 toptools" *ngIf="documents.length != 0">
   <button type="button" mat-raised-button color="primary" (click)="openAddDocumentDialog()">
     <small>Nuevo Documento</small>
   </button>
