--- a/src/app/hub/single-user/single-user.component.html
+++ b/src/app/hub/single-user/single-user.component.html
@@ -59,10 +59,12 @@
               ><strong class="txt-blue">0</strong></small
             >
           </p>
+          <p class="set-12">
+          <button class="set-12" type="button" mat-raised-button color="accent" (click)="linkMe('hub/documentos')" >Mis Documentos</button>
+        </p>
         </div>
       </div>
     </mat-card>
-    <button type="button" mat-raised-button color="accent" (click)="linkMe('hub/documentos')" >Mis Documentos</button>
     <mat-card class="set-12">
       <div class="app-map-box"></div>
     </mat-card>
