--- a/src/app/hub/single-user/single-user.component.scss
+++ b/src/app/hub/single-user/single-user.component.scss
@@ -4,7 +4,11 @@
   margin-bottom: 100px;
   float: left;
 
-  
+  .innerhldr {
+
+    margin-top: 80px;
+    
+  }
 
   mat-spinner {
     position: absolute !important;
