--- a/src/app/hub/user-documents/user-documents.component.scss
+++ b/src/app/hub/user-documents/user-documents.component.scss
@@ -1,11 +1,15 @@
 :host {
     width: 100%;
     margin-top: 5px;
-    margin-bottom: 100px;
     float: left;
   
     
-  
+    .innerhldr {
+ 
+      margin-top: 100px;
+     
+    }
+
     mat-spinner {
       position: absolute !important;
       top: 50%;
