--- a/src/app/search-results/search-results.component.scss
+++ b/src/app/search-results/search-results.component.scss
@@ -40,7 +40,7 @@
 
       button {
         font-size: 11pt;
-        transition: all .2s linear;
+        transition: all 0.2s linear;
         text-decoration: underline;
       }
 
