modify legend search

--- a/src/app/hub/components/association-register/association-register.component.html
+++ b/src/app/hub/components/association-register/association-register.component.html
@@ -30,7 +30,7 @@
           <mat-label>Buscar tu asociación</mat-label>
           <input matInput formControlName="search" />
         </mat-form-field>
-        <mat-hint><small>Si no esta en la lista da click en siguiente para registrarla</small></mat-hint>
+        <mat-hint><small>Si no la encuentras dar click en siguiente para registrarla</small></mat-hint>
       </form>
     </div>
     <div class="set-12 ctrls">
