change styles form association

--- a/src/app/hub/app-configuration/app-configuration.component.html
+++ b/src/app/hub/app-configuration/app-configuration.component.html
@@ -126,9 +126,9 @@
           </button>
         </mat-chip-list>
         <mat-hint
-          >** Presiona <strong>ENTER</strong> después de escribir algo que te
+          ><small>** Presiona <strong>ENTER</strong> después de escribir algo que te
           haga feliz entriztesca, ej:
-          <strong>"Comida o Delincuencia"</strong>
+          <strong>"Comida o Delincuencia"</strong></small>
         </mat-hint>
       </mat-form-field>
     </div>
