--- a/src/app/hub/components/tabs-mobile/tabs-mobile.component.html
+++ b/src/app/hub/components/tabs-mobile/tabs-mobile.component.html
@@ -2,8 +2,8 @@
   <mat-spinner></mat-spinner>
 </div>
 
-<div class="set-12"  *ngIf="isDataAvailable && isMobile">
-  <mat-tab-group animationDuration="0ms">
+<div class="set-12" *ngIf="isDataAvailable && isMobile">
+  <mat-tab-group [disableRipple]="true" [@.disabled]="true">
     <mat-tab label="Temas">
       <search-input-mobile></search-input-mobile>
       <card-topics-mobile></card-topics-mobile>
@@ -24,6 +24,5 @@
       <h3 >Participa, invita y denuncia</h3>
       <card-goals-mobile></card-goals-mobile>
     </mat-tab> -->
-
   </mat-tab-group>
 </div>
